[UPDATE] - Adicionando redes sociais e finalisando about

--- a/static/about/index.html
+++ b/static/about/index.html
@@ -66,8 +66,8 @@
                     <img src="/img/img_avatar/allan.jpg" class="rounded-circle" alt="avatar">
                     <h3 class="font-weight-bold mt-4 mb-3">Allan<br>Kardec</h3>
                     <a target="_blank" href="https://www.instagram.com/kardecallan56/" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-instagram"><i class="fa fa-instagram"></i></a>
-                    <a target="_blank" href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
-                    <a target="_blank" href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-github"><i class="fa fa-github"></i></a>
+                    <a target="_blank" href="https://www.linkedin.com/in/allan-allan-5b4b92164/" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
+                    <a target="_blank" href="https://github.com/kardecallan566" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-github"><i class="fa fa-github"></i></a>
                 </div>
             </a>
 
@@ -86,7 +86,7 @@
                     <img src="/img/img_avatar/kevson-about.png" class="rounded-circle" alt="avatar">
                     <h3 class="font-weight-bold mt-4 mb-3">Kevson<br>Santos</h3>
                     <a target="_blank" href="https://www.instagram.com/kevsonfilipe/" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-instagram"><i class="fa fa-instagram"></i></a>
-                    <a target="_blank" href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
+                    <a target="_blank" href="https://www.linkedin.com/in/kevson-filipe-moraes-santos-08b0381a7/" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
                     <a target="_blank" href="https://github.com/KevsonDoc" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-github"><i class="fa fa-github"></i></a>
                 </div>
             </a>
@@ -95,8 +95,8 @@
                 <div class="profile">
                     <img src="/img/img_avatar/pablo.png" class="rounded-circle" alt="avatar">
                     <h3 class="font-weight-bold mt-4 mb-3">Pablo<br>Miranda</h3>
-                    <a target="_blank" href="https://www.instagram.com/_pablo_mir16/" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-instagram"><i class="fa fa-instagram"></i></a>
-                    <a target="_blank" href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
+                    <a target="_blank" href="https://www.instagram.com/_pablo_mir" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-instagram"><i class="fa fa-instagram"></i></a>
+                    <a target="_blank" href="https://www.linkedin.com/in/pablo-costa-729a961a6/" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
                     <a target="_blank" href="https://github.com/pablomir16" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-github"><i class="fa fa-github"></i></a>
                 </div>
             </a>
