--- a/static/about/kevsonfilipe.html
+++ b/static/about/kevsonfilipe.html
@@ -65,13 +65,12 @@
                 </div>
                 <div id="texto">
                     <p>
-                        test<br> O doutor =================================this is a white div Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, corporis odit? Eveniet consectetur optio dolor dolore debitis, modi quaerat voluptatem tenetur minus necessitatibus, nesciunt velit, deserunt
-                        distinctio quidem reiciendis ullam.
+                        <br> O Doutor parece ser humano. Ele é espirituoso, concentrado e pode ser confundido com outro homem na rua. Mas ele é um Lorde do Tempo: um alienígena de 900 anos de idade com 2 corações, membro de uma civilização talentosa que dominou a viagem no tempo. O Doutor salva planetas para viver – mais um hobby, na verdade, e ele é muito, muito bom nisso.  Sua antiga e não muito confiável nave espacial se assemelha a uma cabine telefônica a T.A.R.D.I.S, mas ela é muito mais do que parece ser.
                     </p>
                 </div>
                 <div class="text-center redes-sociais-profiles">
                     <a target="_blank" href="https://www.instagram.com/kevsonfilipe/" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-instagram"><i class="fa fa-instagram"></i></a>
-                    <a target="_blank" href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
+                    <a target="_blank" href="https://www.linkedin.com/in/kevson-filipe-moraes-santos-08b0381a7/" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
                     <a target="_blank" href="https://github.com/KevsonDoc" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-github"><i class="fa fa-github"></i></a>
                 </div>
             </div>
