--- a/static/about/pablomiranda.html
+++ b/static/about/pablomiranda.html
@@ -64,13 +64,12 @@
                 </div>
                 <div id="texto">
                     <p>
-                        test<br>this is a white div
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, corporis odit? Eveniet consectetur optio dolor dolore debitis, modi quaerat voluptatem tenetur minus necessitatibus, nesciunt velit, deserunt distinctio quidem reiciendis ullam.
+                        O maluco do Hardware e o cara do Marketing.
                     </p>
                 </div>
                 <div class="text-center redes-sociais-profiles">
-                    <a target="_blank" href="https://www.instagram.com/_pablo_mir16/" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-instagram"><i class="fa fa-instagram"></i></a>
-                    <a target="_blank" href="#" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
+                    <a target="_blank" href="https://www.instagram.com/_pablo_mir" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-instagram"><i class="fa fa-instagram"></i></a>
+                    <a target="_blank" href="https://www.linkedin.com/in/pablo-costa-729a961a6/" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-linkedin"><i class="fa fa-linkedin"></i></a>
                     <a target="_blank" href="https://github.com/pablomir16" class="btn azm-social azm-size-64 azm-circle azm-long-shadow azm-github"><i class="fa fa-github"></i></a>
                 </div>
             </div>
