[UPDATE] Adding routes in backend and in home page to Services and Contacts

--- a/static/index.html
+++ b/static/index.html
@@ -52,10 +52,10 @@
                         <a class="nav-link" href="http://blog.undergrounds.rf.gd/">BLOG</a>
                     </li>
                     <li class="nav-item" role="presentation">
-                        <a class="nav-link" href="#portfolio">SERVIÇOS</a>
+                        <a class="nav-link" href="services/">SERVIÇOS</a>
                     </li>
                     <li class="nav-item" role="presentation">
-                        <a class="nav-link" href="#contact">CONTATO</a>
+                        <a class="nav-link" href="contact/">CONTATO</a>
                     </li>
                 </ul>
             </div>
