[UPDATE] - Criando todas as rotas de links para services e contact

--- a/static/about/index.html
+++ b/static/about/index.html
@@ -47,8 +47,8 @@
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="/about/">SOBRE</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="http://blog.undergrounds.rf.gd/">BLOG</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#portfolio">SERVIÇOS</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#contact">CONTATO</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="/services/">SERVIÇOS</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="/contact/">CONTATO</a></li>
                 </ul>
             </div>
         </div>
