--- a/static/contact/index.html
+++ b/static/contact/index.html
@@ -46,16 +46,16 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation">
-                        <a class="nav-link" href="about/">SOBRE</a>
+                        <a class="nav-link" href="/about">SOBRE</a>
                     </li>
                     <li class="nav-item" role="presentation">
                         <a class="nav-link" href="http://blog.undergrounds.rf.gd/">BLOG</a>
                     </li>
                     <li class="nav-item" role="presentation">
-                        <a class="nav-link" href="services/">SERVIÇOS</a>
+                        <a class="nav-link" href="/services">SERVIÇOS</a>
                     </li>
                     <li class="nav-item" role="presentation">
-                        <a class="nav-link" href="contact/">CONTATO</a>
+                        <a class="nav-link" href="/contact">CONTATO</a>
                     </li>
                 </ul>
             </div>
@@ -63,7 +63,7 @@
     </nav>
     <header class="masthead text-center text-white d-flex">
         <div class="container my-auto">
-            
+            //////////////////////////////////
         </div>
     </header>
             <!--fim do player de audio-->
