[UPDATE] - Adicionando cartões na página de serviços

--- a/static/services/index.html
+++ b/static/services/index.html
@@ -32,6 +32,7 @@
     <link rel="stylesheet " href="/css/style.css" media="all">
     <!--icone do site-->
     <link rel="icon" href="img/icon.png">
+    <link rel="stylesheet" href="css/base.css">
 </head>
 
 <body id="page-top">
@@ -61,9 +62,18 @@
             </div>
         </div>
     </nav>
-    <header class="masthead text-center text-white d-flex">
-        <div class="container my-auto">
-            
+    <header class="masthead text-center text-black d-flex">
+            <div class="basic-grid">
+                <div class="card">1</div>
+                <div class="card">2</div>
+                <div class="card">3</div>
+                <div class="card">4</div>
+                <div class="card">5</div>
+                <div class="card">6</div>
+                <div class="card">7</div>
+                <div class="card">8</div>
+                <div class="card">9</div>
+                <div class="card">10</div>
         </div>
     </header>
             <!--fim do player de audio-->
