--- a/static/services/index.html
+++ b/static/services/index.html
@@ -32,7 +32,7 @@
     <link rel="stylesheet " href="/css/style.css" media="all">
     <!--icone do site-->
     <link rel="icon" href="img/icon.png">
-    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="/services/css/base.css">
 </head>
 
 <body id="page-top">
@@ -62,20 +62,37 @@
             </div>
         </div>
     </nav>
-    <header class="masthead text-center text-black d-flex">
-            <div class="basic-grid">
-                <div class="card">1</div>
-                <div class="card">2</div>
-                <div class="card">3</div>
-                <div class="card">4</div>
-                <div class="card">5</div>
-                <div class="card">6</div>
-                <div class="card">7</div>
-                <div class="card">8</div>
-                <div class="card">9</div>
-                <div class="card">10</div>
+    <header class="masthead text-center d-flex">
+        <div class="basic-grid">
+            <div class="card">
+                <img src="/img/logo_16x9.jpg" alt="logo" class="imagem">
+                <h5>Hello Worls</h5>
+            </div>
+            <div class="card">
+                <img src="/img/logo_16x9.jpg" alt="logo" class="imagem">
+                <h5>Hello Worls</h5>
+            </div>
+            <div class="card">
+                <img src="/img/logo_16x9.jpg" alt="logo" class="imagem">
+                <h5>Hello Worls</h5>
+            </div>
+            <div class="card">
+                <img src="/img/logo_16x9.jpg" alt="logo" class="imagem">
+                <h5>Hello Worls</h5>
+            </di>
         </div>
     </header>
+    <section id="wearefoda">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">NÓS SOMOS O QUE FAZEMOS</h2>
+                    <hr class="my-4">
+                </div>
+            </div>
+        </div>
+        
+    </section>
             <!--fim do player de audio-->
     </section>
     <script src="/js/jquery.min.js"></script>
