[UPDATE] - Finalmente depois de muito trabalho e falhas conseguir usar bootstrap corrigi os bugs de bordas na servoces e ficou tudoreponsivo

--- a/static/services/index.html
+++ b/static/services/index.html
@@ -32,7 +32,8 @@
     <link rel="stylesheet " href="/css/style.css" media="all">
     <!--icone do site-->
     <link rel="icon" href="img/icon.png">
-    <link rel="stylesheet" href="/services/css/base.css">
+    <link rel="stylesheet" href="/services/css/style.css">
+    <link rel="stylesheet" href="/services/css/bootstrap.css">
 </head>
 
 <body id="page-top">
@@ -63,23 +64,35 @@
         </div>
     </nav>
     <header class="masthead text-center d-flex">
-        <div class="basic-grid">
-            <div class="card">
-                <img src="/img/logo_16x9.jpg" alt="logo" class="imagem">
-                <h5>Hello Worls</h5>
+        <div class="card-deck">
+            <div class="card border border-primary">
+              <img src="/img/logo_16x9.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
             </div>
             <div class="card">
-                <img src="/img/logo_16x9.jpg" alt="logo" class="imagem">
-                <h5>Hello Worls</h5>
+              <img src="/img/logo_16x9.jpg" class="card-img-top" alt="...">
+              <div class="ctao card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              </div>
             </div>
             <div class="card">
-                <img src="/img/logo_16x9.jpg" alt="logo" class="imagem">
-                <h5>Hello Worls</h5>
+              <img src="/img/logo_16x9.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              </div>
             </div>
             <div class="card">
-                <img src="/img/logo_16x9.jpg" alt="logo" class="imagem">
-                <h5>Hello Worls</h5>
-            </di>
+                <img src="/img/logo_16x9.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                </div>
+              </div>
         </div>
     </header>
     <section id="wearefoda">
