--- a/static/services/index.html
+++ b/static/services/index.html
@@ -65,31 +65,31 @@
     </nav>
     <header class="masthead text-center d-flex">
         <div class="card-deck">
-            <div class="card border border-primary">
+            <div class="card">
               <img src="/img/logo_16x9.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Service 1</h5>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
             </div>
             <div class="card">
-              <img src="/img/logo_16x9.jpg" class="card-img-top" alt="...">
+              <img src="/img/tunel.gif" class="card-img-top" alt="...">
               <div class="ctao card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Service 2</h5>
                 <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
               </div>
             </div>
             <div class="card">
-              <img src="/img/logo_16x9.jpg" class="card-img-top" alt="...">
+              <img src="/img/space.gif" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Service 3</h5>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
               </div>
             </div>
             <div class="card">
-                <img src="/img/logo_16x9.jpg" class="card-img-top" alt="...">
+                <img src="/img/imf.jpg" class="card-img-top" alt="..." style="width:  100%; height: 170px;">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">Service 3</h5>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                 </div>
               </div>
