--- a/static/services/index.html
+++ b/static/services/index.html
@@ -99,8 +99,21 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">NÓS SOMOS O QUE FAZEMOS</h2>
+                    <h2 class="section-heading">NOSSO PORTFÓLIO</h2>
                     <hr class="my-4">
+                    <div class="card mb-3" style="max-width: 540px;">
+                        <div class="row no-gutters">
+                            <div class="col-md-4">
+                                <img src="/img/img_avatar/wallpaper_mobile.jpg" class="card-img" alt="..">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Projeto 1</h5>
+                                    <p class="card-text">Nunca é demais lembrar o peso e o significado destes problemas, uma vez que a valorização de fatores subjetivos estende o alcance e a importância dos níveis de motivação departamental.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
