--- a/static/services/index.html
+++ b/static/services/index.html
@@ -96,30 +96,32 @@
         </div>
     </header>
     <section id="wearefoda">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">NOSSO PORTFÓLIO</h2>
-                    <hr class="my-4">
-                    <div class="card mb-3" style="max-width: 540px;">
-                        <div class="row no-gutters">
-                            <div class="col-md-4">
-                                <img src="/img/img_avatar/wallpaper_mobile.jpg" class="card-img" alt="..">
-                            </div>
-                            <div class="col-md-8">
-                                <div class="card-body">
-                                    <h5 class="card-title">Projeto 1</h5>
-                                    <p class="card-text">Nunca é demais lembrar o peso e o significado destes problemas, uma vez que a valorização de fatores subjetivos estende o alcance e a importância dos níveis de motivação departamental.</p>
-                                </div>
-                            </div>
+        <div class="divisao">
+            <div class="text-center">
+                <h2 class="section-heading">NOSSO PORTFÓLIO</h2>
+                <hr class="my-4">
+                <div class="card-deck">
+                    <div class="card">
+                        <img src="/img/site.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Site Uderground DEVs</h5>
+                            <p class="card-text">Como primeira proposta para mostrar suas eficiencia a undergrouns iniciou com um projeto próprio, o seu site. Construido usadno tenologias como node JS, JavaScript, bootstrap, HTML 5 e CSS 3</p>
+                            <div class="gol"><p class="statusDev card-text">STATUS&nbsp;| &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; under development</p></div>
                         </div>
                     </div>
-                </div>
+                        <div class="card">
+                            <img src="..." class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Projeto Babel</h5>
+                                <p class="card-text">Como primeira proposta para mostrar suas eficiencia a undergrouns iniciou com um projeto próprio, o seu site. Construido usadno tenologias como node JS, JavaScript, bootstrap, HTML 5 e CSS 3</p>
+                                <div class="gol"><p class="statusDev card-text">STATUS&nbsp;| &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; under development</p></div>
+                            </div>
+                        </div>                      
+                    </div>
             </div>
         </div>
-        
     </section>
-            <!--fim do player de audio-->
+    <script src="/js/dom.js"></script>
     </section>
     <script src="/js/jquery.min.js"></script>
     <script src="/bootstrap/js/bootstrap.min.js"></script>
