[ADD] - Adicionando 2 projeto

--- a/static/services/index.html
+++ b/static/services/index.html
@@ -102,7 +102,7 @@
                 <hr class="my-4">
                 <div class="card-deck">
                     <div class="card">
-                        <img src="/img/site.png" class="card-img-top" alt="...">
+                        <img src="/img/space.gif" class="card-img-top" alt="..." height="300px">
                         <div class="card-body">
                             <h5 class="card-title">Site Uderground DEVs</h5>
                             <p class="card-text">Como primeira proposta para mostrar suas eficiencia a undergrouns iniciou com um projeto próprio, o seu site. Construido usadno tenologias como node JS, JavaScript, bootstrap, HTML 5 e CSS 3</p>
@@ -110,9 +110,9 @@
                         </div>
                     </div>
                         <div class="card">
-                            <img src="..." class="card-img-top" alt="...">
+                            <img src="/img/voiage.gif" class="card-img-top" alt="..." style="height: 300px;">
                             <div class="card-body">
-                                <h5 class="card-title">Projeto Babel</h5>
+                                <h5 class="card-title">Projeto Voyager 1</h5>
                                 <p class="card-text">Como primeira proposta para mostrar suas eficiencia a undergrouns iniciou com um projeto próprio, o seu site. Construido usadno tenologias como node JS, JavaScript, bootstrap, HTML 5 e CSS 3</p>
                                 <div class="gol"><p class="statusDev card-text">STATUS&nbsp;| &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; under development</p></div>
                             </div>
