[UPDATE] adding PROJECT into navbars

--- a/static/contact/index.html
+++ b/static/contact/index.html
@@ -55,12 +55,15 @@
                         <a class="nav-link" href="/services">SERVIÇOS</a>
                     </li>
                     <li class="nav-item" role="presentation">
+                        <a class="nav-link" href="/projects">PROJETOS</a>
+                    </li>
+                    <li class="nav-item" role="presentation">
                         <a class="nav-link" href="/contact">CONTATO</a>
                     </li>
                 </ul>
             </div>
         </div>
-    </nav>
+    </nav> 
     <header class="masthead text-center text-white d-flex">
         <div class="container my-auto">
            
