--- a/static/services/index.html
+++ b/static/services/index.html
@@ -54,10 +54,13 @@
                         <a class="nav-link" href="http://blog.undergrounds.rf.gd/">BLOG</a>
                     </li>
                     <li class="nav-item" role="presentation">
-                        <a class="nav-link" href="/services">SERVIÇOS</a>
+                        <a class="nav-link" href="services/">SERVIÇOS</a>
                     </li>
                     <li class="nav-item" role="presentation">
-                        <a class="nav-link" href="/contact">CONTATO</a>
+                        <a class="nav-link" href="projects/">PROJETOS</a>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <a class="nav-link" href="contact/">CONTATO</a>
                     </li>
                 </ul>
             </div>
@@ -95,7 +98,7 @@
               </div>
         </div>
     </header>
-    <section id="wearefoda">
+    <!--<section id="wearefoda">
         <div class="divisao">
             <div class="text-center">
                 <h2 class="section-heading">NOSSO PORTFÓLIO</h2>
@@ -120,7 +123,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>-->
     <script src="/js/dom.js"></script>
     </section>
     <script src="/js/jquery.min.js"></script>
