--- a/static/about/pablomiranda.html
+++ b/static/about/pablomiranda.html
@@ -37,20 +37,35 @@
 
 <body id="page-top">
     <body id="page-top">
-        <nav class="navbar navbar-dark navbar-expand-lg fixed-top" id="mainNav" style="background-color: rgba(142,15,242,0.9); height: 6rem;" onmouseover="c3()">
+        <nav class="navbar navbar-dark navbar-expand-lg fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="/" style="color: rgb(237,237,237);"><img id='slogan' src="/img/underground-slogan.png" alt=""></a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" aria-controls="navbarResponsive" aria-expanded="false"
-                    aria-label="Toggle navigation"><i class="fa fa-align-justify"></i></button>
+                <a class="navbar-brand js-scroll-trigger" href="/" style="color: rgb(237,237,237)">
+                    <img id='slogan' src="/img/underground-slogan.png" alt="">
+                </a>
+                <button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right ml-auto" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon my-toggler"></span>
+                </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="nav navbar-nav ml-auto">
-                        <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="/about/">SOBRE</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#services">BLOG</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#portfolio">SERVIÇOS</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#contact">CONTATO</a></li>
+                        <li class="nav-item" role="presentation">
+                            <a class="nav-link" href="/about">SOBRE</a>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                            <a class="nav-link" href="http://blog.undergrounds.rf.gd/">BLOG</a>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                            <a class="nav-link" href="/services">SERVIÇOS</a>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                            <a class="nav-link" href="/projects">PROJETOS</a>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                            <a class="nav-link" href="/contact">CONTATO</a>
+                        </li>
                     </ul>
                 </div>
             </div>
-        </nav>
+        </nav> 
 
         <section class="team-section text-center w-100 h-100">
             <div class="text-center ">
