--- a/static/index.html
+++ b/static/index.html
@@ -56,6 +56,9 @@
                         <a class="nav-link" href="services/">SERVIÇOS</a>
                     </li>
                     <li class="nav-item" role="presentation">
+                        <a class="nav-link" href="projects/">PROJETOS</a>
+                    </li>
+                    <li class="nav-item" role="presentation">
                         <a class="nav-link" href="contact/">CONTATO</a>
                     </li>
                 </ul>
