--- a/static/index.html
+++ b/static/index.html
@@ -145,10 +145,11 @@
                     <div class="modal-content">
                         <div class="modal-body">
                             <h1 class="modal-title" id="staticBackdropLabel">candidate-se</h1>
-                            <form method="POST">
+                            <form method="POST" class="ola">
+                                <div class="input-1">
                                     <input type="email" name="email-entrar" id="email" class="input-form" placeholder="Email" onblur="validarEmail()" onfocus="redefinirMsg()" required>
-                                    <span id="error-email"></span>
-                                    <input type="submit" value="Cadastrar">
+                                </div>
+                                <span id="error-email"></span>
                             </form>
                         </div>
                     </div>
@@ -156,25 +157,9 @@
             </div>
         </div>        
     </section>
-    <script>
-        function validarEmail() {
-            var email = document.querySelector('#email');
-            var error = document.querySelector('#error-email');
-            if(!email.checkValidity()) {
-                error.innerHTML = 'Email invalido';
-            }
-        }
-
-        function redefinirMsg() {
-            var error = document.querySelector('#error-email');
-            if(error.innerHTML == "Email invalido") {
-                error.innerHTML = "";
-            }
-        }
-
-    </script>
+    
     <!--======================================FIM CANDIDATE-SE=======================================================-->
-
+    <script src="/js/validation.js"></script>
     <script src="/js/jquery.min.js"></script>
     <script src="/bootstrap/js/bootstrap.min.js"></script>
     <script src="/js/bs-init.js"></script>
