[UPDATE] - Complete email input.

--- a/static/index.html
+++ b/static/index.html
@@ -151,8 +151,11 @@
                             <form method="POST" class="ola">
                                 <div class="input-1">
                                     <input type="email" name="email-entrar" id="email" class="input-form" placeholder="Email" onblur="validarEmail()" onfocus="redefinirMsg()" required>
+                                    <span id="error-email"></span>
                                 </div>
-                                <span id="error-email"></span>
+                                <div class="input-2">
+                                    
+                                </div>
                             </form>
                         </div>
                     </div>
