[UPDATE] -Estilização de email Email, nome e git hub completa

--- a/static/index.html
+++ b/static/index.html
@@ -151,7 +151,7 @@
                             <form method="POST" class="form_style">
                                 <div class="texto">
                                     <p class="text_paragrafo">Descreva um texto com no minimo 1000 palavras sobre o porque ele você deveria se um Underground DEVs</p>
-                                    <input type="text" name="texto" id="texto" class="input_style" placeholder="Texto" required>
+                                    <input type="text" name="texto" id="texto" class="" placeholder="Texto" required>
                                 </div>
                                 <div class="name">
                                     <input type="text" id="name" class="input_style" placeholder="Nome" required>
