[UPDATE] error fix

--- a/static/index.html
+++ b/static/index.html
@@ -140,74 +140,7 @@
     <!--==========================================CANDIDATE-SE=======================================================-->
     
     <section id="register" class="bg-dark text-white">
-        <div class="container text-center">
-            <h2 class="mb-4">Venha ser Underground também!</h2>
-            <button type="button" class="btn btn-light btn-xl sr-button" data-toggle="modal" data-target="#exampleModalCenter">candidate-se!</button>
-            <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" arial-hidden="true">
-                <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                        <div class="modal-body">
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                            <h1 class="modal-title" id="staticBackdropLabel">candidate-se</h1>
-                            <form>               
-                                <div class="form-group container" style="height: 35rem;" style="margin: -16px;" style="padding: -15px;">
-                                    <div class="container_input form-group" style="padding-right: 1rem;">
-                                        <input type="text" class="input_style form-control" id="formGroupExampleInput" placeholder="Nome">
-                                        <div class="div_data" style="margin-top: 1.5rem;">
-                                            <label for="" style="margin-right: 1.7rem;">Data de Nascimento</label>
-                                            <input type="date" class="input_data form-control" id="formGroupExampleInput" placeholder="Data de nascimento" style="margin-top: 0rem;">
-                                        </div>
-
-                                        <div id="input-radio" class="input-radio">
-                                            <label for="label-genero">Gênero</label>
-                                            <div class="radio1 form-check">
-                                                <input class="form-check-input" type="radio" name="exampleRadios" id="genero_feminino" value="feminino">
-                                                <label class="form-check-label" for="genero_feminino">Feminino</label>
-                                            </div>
-                                            <div class="radio2 form-check">
-                                                <input class="form-check-input" type="radio" name="exampleRadios" id="genero_masculino" value="masculino">
-                                                <label class="form-check-label" for="genero_masculino">Masculino</label>
-                                            </div>
-                                            <div class="radio3 form-check">
-                                                <input class="form-check-input" type="radio" name="exampleRadios" id="genero_outro" value="Outro">
-                                                <label class="form-check-label" for="genero_outro">Outro</label>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <input type="text" class="input_style form-control" id="formGroupExampleInput" placeholder="Email" style="margin-top: 1.5rem;">
-                                    <input type="text" class="input_style form-control" id="formGroupExampleInput" placeholder="GitHub" style="margin-top: 1.5rem;">
-                                    <input type="text" class="input_texto_style form-control container" id="formGroupExampleInput2" placeholder="Another input placeholder">
-                                </div>
-                            </form>
-                            <!--<form method="POST" class="form_style">
-                                <div class="texto">
-                                    <p class="text_paragrafo">Descreva um texto com no minimo 1000 palavras sobre o porque ele você deveria se um Underground DEVs</p>
-                                    <input type="text" name="texto" id="texto" class="card-deck" placeholder="Texto" required>
-                                </div>
-                                <div class="name">
-                                    <input type="text" id="name" class="input_style" placeholder="Nome" required>
-                                </div>
-                                <div class="email">
-                                    <input type="email" id="email" class="input_style" placeholder="Email" onblur="validarEmail()" onfocus="redefinirMsg()">
-                                    <span id="error-email"></span>
-                                </div>
-                                <div class="git">
-                                    <input type="text" id="git" class="input_style" placeholder="github" required>
-                                </div>
-                                <div class="idade">
-                                    <input type="text" placeholder="Idade" required>
-                                </div>
-                                <div class="genero">
-                                    <input type="text" placeholder="Genero" required>
-                                </div>-->
-                            </form>
-                        </div>
-                    </div>
-                </div>              
-            </div>
-        </div>        
+        <script type="text/javascript" src="https://form.jotform.com/jsform/201108212557041"></script>
     </section>
     
     <!--======================================FIM CANDIDATE-SE=======================================================-->
