[UPDATE] adding form of sign up to community

--- a/static/index.html
+++ b/static/index.html
@@ -140,7 +140,23 @@
     <!--==========================================CANDIDATE-SE=======================================================-->
     
     <section id="register" class="bg-dark text-white">
-        <script type="text/javascript" src="https://form.jotform.com/jsform/201108212557041"></script>
+        <div class="container text-center">
+            <h2 class="mb-4">Venha ser Underground também!</h2>
+            <script src ="https://form.jotform.com/static/feedback2.js" type="text/javascript"></script><script type="text/javascript">
+                var JFL_201108212557041 = new JotformFeedback({
+                  formId: '201108212557041',
+                  base: 'https://form.jotform.com/',
+                  windowTitle: 'Candidate-se',
+                  background: 'rgba(0,0,0,0.48)',
+                  fontColor: '#FFFFFF',
+                  type: '2',
+                  height: 500,
+                  width: 700,
+                  openOnLoad: false
+                });
+            </script>
+              <button type="button" class="btn btn-light btn-xl sr-button lightbox-201108212557041">Candidate-se!</button>
+        </div>        
     </section>
     
     <!--======================================FIM CANDIDATE-SE=======================================================-->
