[UPDATE] - optimizing photo of photo background

--- a/static/index.html
+++ b/static/index.html
@@ -214,7 +214,7 @@
                             <!--<script src="js/AudioPlayer.js">
                             </script>-->
                             <div id="main">
-                                <img id="imgPlayer" src="img/logo_16x9.jpg">
+                                <img id="imgPlayer" src="img/wallpaper_rad.png">
                                 <div id="player">
                                     <div id="buttons">
                                         <button id="play" onclick="playOrPauseSong()">
