--- a/static/index.html
+++ b/static/index.html
@@ -21,8 +21,8 @@
 
     <title>Undergrounds</title>
 
-    <link rel=preload rel="stylesheet" href="/css/registro.css">
-    <link rel=preload rel="stylesheet " href="/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/registro.css">
+    <link rel="stylesheet " href="/bootstrap/css/bootstrap.min.css">
     <!--nuvem-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800 ">
     <!--nuvem-->
@@ -30,7 +30,7 @@
     <link href="fonts/font-awesome.min.css ">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">
-    <link rel=preload rel="stylesheet " href="/css/style.css" media="all">
+    <link rel="stylesheet " href="/css/style.css" media="all">
     <!--icone do site-->
     <link rel="icon" href="img/icon.png">
 </head>
