--- a/static/services/index.html
+++ b/static/services/index.html
@@ -66,36 +66,24 @@
             </div>
         </div>
     </nav>
-    <header class="masthead text-center d-flex">
-        <div class="card-deck">
-            <div class="card">
-              <img src="/img/logo_16x9.jpg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Service 1</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              </div>
-            </div>
-            <div class="card">
-              <img src="/img/tunel.gif" class="card-img-top" alt="...">
-              <div class="ctao card-body">
-                <h5 class="card-title">Service 2</h5>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-              </div>
-            </div>
-            <div class="card">
-              <img src="/img/space.gif" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Service 3</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-              </div>
-            </div>
-            <div class="card">
-                <img src="/img/imf.jpg" class="card-img-top" alt="..." style="width:  100%; height: 170px;">
-                <div class="card-body">
-                  <h5 class="card-title">Service 3</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+    <header class="masthead text-center">
+        <div class="container">
+            <div class="row style">
+                <div class="col">
+                    <img class="img-fluid" src="/img/mentoria.gif" alt="">
                 </div>
-              </div>
+                <div class="col">
+                    <img class="img-fluid" src="/img/iot.gif" alt="">
+                </div>
+                <div class="col">
+                    3 of 3
+                </div>
+            </div>
+            <div class="row style">
+                <div class="col">
+                    1 of 2
+                </div>
+            </div>
         </div>
     </header>
 
