[UPDATE] - correcting route error in services

--- a/static/services/index.html
+++ b/static/services/index.html
@@ -48,19 +48,19 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation">
-                        <a class="nav-link" href="about/">SOBRE</a>
+                        <a class="nav-link" href="/about/">SOBRE</a>
                     </li>
                     <li class="nav-item" role="presentation">
                         <a class="nav-link" href="http://blog.undergrounds.rf.gd/">BLOG</a>
                     </li>
                     <li class="nav-item" role="presentation">
-                        <a class="nav-link" href="services/">SERVIÇOS</a>
+                        <a class="nav-link" href="/services/">SERVIÇOS</a>
                     </li>
                     <li class="nav-item" role="presentation">
-                        <a class="nav-link" href="projects/">PROJETOS</a>
+                        <a class="nav-link" href="/projects/">PROJETOS</a>
                     </li>
                     <li class="nav-item" role="presentation">
-                        <a class="nav-link" href="contact/">CONTATO</a>
+                        <a class="nav-link" href="/contact/">CONTATO</a>
                     </li>
                 </ul>
             </div>
